# jailrun

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/scripts/: validate_manifest_schema.py  validate_provider_data.py
bakery/: README.md  __init__.py  bake.freebsd.sh  bakery.py  test_plan_to_provision_cmd.py  test_verification_bump.py
bakery/recipes/: cmake-ninja.md  (+4 more)
bench/: README.md  bench.py  blink.yaml
deploy/: prove-on-freebsd.sh  provision-freebsd.sh
docs/: DEV_ENVIRONMENT.md  GNU-VS-BSD-POLICY.md  THREAT-MODEL.md  USAGE.md  V1-VISION.md
probe/: README.md  probe.py  smoke.freebsd.sh  test_classify.py  test_verification.py
providers/: __init__.py  coreutils-flavor.json  multi-binary-pkgs.json  pkg-artifacts.json  port-artifacts.json  provider-map.json  registry.schema.json  test_flavor_policy.py  test_registry_roundtrip.py
runtime/: README.md  __init__.py  _mocks.py  cli.py  doctor.py  engine.py  explain.py  gc.py  lifecycle.py  run.freebsd.sh  rundb.py  scan.py  test_doctor.py  test_engine_rundb.py  test_exec.py  test_explain.py  test_gc.py  test_logs.py  test_pull.py  test_rundb.py  test_scan.py
schemas/: substitution-manifest.schema.json  test_substitution_manifest_schema.py
store/: README.md  __init__.py  store.freebsd.sh  store.py  test_base_mountpoint.py  test_layer_adversarial.py  test_layer_adversarial_extended.py  test_merge_tree.py  test_mount_containment.py  test_registry_auth.py  test_special_file_handling.py  test_store_concurrency.py  test_thin_rootfs.py
(+2 files in other folders)
