[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jailrun"
version = "0.1.0"
description = "A docker-run-shaped OCI runtime for FreeBSD, backed by jails (native-first, Linuxulator only when needed), with a ZFS image store."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["freebsd", "jails", "containers", "oci", "zfs", "linuxulator", "docker-alternative"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Programming Language :: Python :: 3",
]
dependencies = []  # runtime path is stdlib + shell-outs (skopeo/umoci/zfs/jail) by design

[project.optional-dependencies]
dev = ["pytest", "jsonschema"]

[project.scripts]
jailrun = "runtime.cli:main"

[tool.setuptools]
# Flat layout: the four subsystems are top-level packages for now. A single `jailrun`
# package nest is a planned packaging step (see CONTRIBUTING).
packages = ["runtime", "probe", "store", "bakery"]
